<resources>
    <string name="app_name">Chumi Home Gas</string>
    <string name="btnSignUp">Sign Up</string>

    <string name="txtSignUp">Sign Up</string>
    <string name="txtLogin">Login</string>
    <string name="txtRemember">Remember me</string>
    <string name="txtSecureCode">secure code (incase you forget your password)</string>
    <string name="txtWedding">Wedding Anniversary (optional)</string>
    <string name="txtBirthday">Birthday (optional)</string>
    <string name="txtForgotpass"><i>Forgot your password?</i></string>
    <string name="txtAlreadyhaveacct"><i>Already have an account? Sign in</i></string>
    <string name="txtGiveUsAFeedback">Give us a feedback</string>

    <string name="btnRetrievePassword">Retrieve Password</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnGoBack">Go back</string>
    <string name="btnSubmitFeedback">Submit Feedback</string>

    <string name="hintPhoneNumber">Phone number </string>
    <string name="hintMessage">Message </string>
    <string name="hintTitle">Title </string>

    <string name="hintAddress">Address </string>

    <string name="hintEmail">Email </string>
    <string name="hintName">Name </string>

    <string name="homeDatepickerText">Kindly pick a date you wish to refill your cylinder.</string>
    <string name="homeSizeofCylinderText">Size of cylinder in kg. </string>
    <string name="homeDatepicker">Fill in Date </string>
    <string name="homeTimepicker">Fill in Time </string>

    <string name="homeDeliveryText">Delivery</string>
    <string name="homeDelivery1Text">Home Service (N400/kg)</string>
    <string name="homeDelivery2Text">Come to our office (N380/kg)</string>

    <string name="homeSizeZeroHint"> 15kg </string>

    <string name="homeSizeZeroText"> 0 </string>
    <string name="homeSizeMinusText"> - </string>
    <string name="homeSizePlusText"> + </string>
    <string name="homeSizeEqualsText"> = </string>
    <string name="homeSizeKGsumText"> 0 </string>
    <string name="homePriceText"> N </string>
    <string name="homeMultilineText"> Extra Comments / Closest Landmark </string>

    <string name="hintPassword">Password </string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fortune King</string>
    <string name="nav_header_subtitle">fortuneking@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">About</string>
    <string name="action_contact_us">Contact us</string>

    <string name="thankyouGreetings">Thank you for requesting our services, we will be in touch with you shortly.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="large_text">
        "About Chumi Home Gas.\n\n"

        "Chumi home gas is an energy company in the cooking gas industry.\n"
        "They use technology to deliver comprehenive services to homes regarding their cooking gas needs.\n\n"
    </string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_contact_us2">ContactUs</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to login -->
</resources>
