<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Home"
    tools:showIn="@layout/app_bar_home">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.CardView>-->


        <TextView
            android:id="@+id/txtkindlypick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/homeDatepickerText"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/homeDatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:ems="10"
                android:inputType="date"
                android:hint="@string/homeDatepicker"/>

            <EditText
                android:id="@+id/homeTimePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:ems="10"
                android:inputType="time"
                android:hint="@string/homeTimepicker"/>

        <TextView
            android:id="@+id/txtsizeofcy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeSizeofCylinderText"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/homeSizeMinusText"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/homeSizeMinusText"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:onClick="decrement"/>

            <EditText
                android:id="@+id/kgText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homeSizeZeroText"
                android:textAlignment="center"
                android:inputType="numberDecimal"
                android:hint="@string/homeSizeZeroHint"/>


            <Button
                android:id="@+id/homeSizePlusText"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/homeSizePlusText"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:onClick="increment"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homeSizeEqualsText"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homePriceText"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/kgsum"
                android:text="@string/homeSizeKGsumText"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp">

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/deliveryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homeDeliveryText"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                />



            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homeDelivery1Text"
                    android:layout_marginLeft="11dp"
                    android:layout_marginStart="11dp"
                    android:checked="true"
                    />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homeDelivery2Text"
                    android:layout_marginLeft="11dp"
                    android:layout_marginStart="11dp"
                    />

            </RadioGroup>

        </LinearLayout>

            <EditText
                android:id="@+id/textArea"
                android:hint="@string/homeMultilineText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:layout_marginBottom="20dp"/>


    </LinearLayout>
</ScrollView>